Crypto class has been modified to work in windows